<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="gravity"
            android:background="@drawable/ic_main_bg_2"
            >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="top"
                />


            // Face
            <ImageView
                android:id="@+id/portraitImage"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_portrait"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_alignBottom="@id/greetingText"
                android:layout_marginBottom="70dip"
                android:paddingBottom="55dp"
                android:clickable="true"
                android:onClick="OnClick"
                />


            // Job Button
            <TextView
                android:id="@+id/jobButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/educationButton"
                android:background="#0f0"
                android:gravity="center"
                android:padding="12dip"
                android:text="@string/app_job_button_text"
                android:textColor="#000"
                android:clickable="true"
                android:onClick="OnClick" >
            </TextView>



            // Eduction Button
            <TextView
                android:id="@+id/educationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:padding="12dip"
                android:text="@string/app_education"
                android:textColor="@color/colorOnGreyBg"
                android:clickable="true"
                android:onClick="OnClick" >
            </TextView>


            // Exit Button
            <TextView
                android:id="@+id/exitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/educationButton"
                android:background="@color/colorExitButton"
                android:gravity="center"
                android:padding="12dip"
                android:text="@string/app_exit"
                android:textColor="@color/colorOnGreyBg"
                android:clickable="true"
                android:onClick="OnClick">
            </TextView>

            // Greeting Text
            <TextView
                android:id="@+id/greetingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/exitButton"
                android:layout_gravity="center|top"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_greeting"
                android:textAlignment="center"
                android:textSize="20dp" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="bottom"
                />


        </RelativeLayout>






</androidx.constraintlayout.widget.ConstraintLayout>